[package]
name = "udp-to-hls"
version = "1.0.12"
description = "UDP MpegTS to HLS VOD for UDP MpegTS Re-Stream"
keywords = ["mpegts", "s3", "hls", "udp"]
categories = ["command-line-utilities"]
readme = "README.md"
license-file = "LICENSE"
homepage = "https://github.com/groovybits/mpegts_to_s3"
repository = "https://github.com/groovybits/mpegts_to_s3"
authors = ["groovybits"]
edition = "2021"

# Build release optimized with debug info
[profile.release]
opt-level = 3
debug = true

[dependencies]
aws-config = "1.0.1"
aws-sdk-s3 = "1.3.0"
aws-types = "1.0.1"
clap = { version = "4.3.3", features = ["derive"] }
pcap = "0.10.0"
tokio = { version = "1.34.0", features = ["full"] }
notify = "5.1.0"
log = "0.4.25"
chrono = "0.4.39"
socket2 = "0.5.8"
get_if_addrs = "0.5.3"
aws-smithy-runtime-api = "1.7.3"
futures = "0.3.31"
env_logger = "0.11.6"
libc = "0.2.169"
ctrlc = "3.4.5"
