[package]
name = "hls-to-udp"
version = "1.0.0"
edition = "2021"
description = "Fetch HLS segments, feed them to FFmpeg, and output MPEG-TS over UDP."
license = "MIT"
authors = ["CK <ck@groovybits>"]

[dependencies]
anyhow = "1"
clap = "4"
m3u8-rs = "6"
reqwest = { version = "0.11", features = ["blocking"] }
url = "2.2"
