[package]
name = "hls-to-udp"
version = "1.0.0"
edition = "2021"
description = "Fetch HLS segments, feed them to FFmpeg, and output MPEG-TS over UDP."
keywords = ["mpegts", "s3"]
categories = ["command-line-utilities"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/groovybits/mpegts_to_s3/client"
repository = "https://github.com/groovybits/mpegts_to_s3/client"
authors = ["groovybits"]

[dependencies]
anyhow = "1"
clap = "4"
m3u8-rs = "6"
reqwest = { version = "0.11", features = ["blocking"] }
url = "2.2"
