[package]
name = "hls-to-udp"
version = "1.0.17"
edition = "2021"
description = "HLS VOD to MPEG-TS UDP Re-cast."
keywords = ["mpegts", "s3", "hls", "udp"]
categories = ["command-line-utilities"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/groovybits/mpegts_to_s3/hls-to-udp"
repository = "https://github.com/groovybits/mpegts_to_s3/hls-to-udp"
authors = ["groovybits"]

[lib]
path = "src/lib.rs"

# Build release optimized with debug info
[profile.release]
opt-level = 3
debug = true

[dependencies]
anyhow = "1"
clap = "4"
env_logger = "0.11.6"
log = "0.4.25"
m3u8-rs = "6"
reqwest = { version = "0.11", features = ["blocking"] }
url = "2.2"
socket2 = "0.5.8"
ctrlc = "3.4.5"

