[package]
name = "hls-to-udp"
version = "1.0.23"
edition = "2021"
description = "HLS VOD to MPEG-TS UDP Re-cast."
keywords = ["mpegts", "s3", "hls", "udp"]
categories = ["command-line-utilities"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/groovybits/mpegts_to_s3/hls-to-udp"
repository = "https://github.com/groovybits/mpegts_to_s3/hls-to-udp"
authors = ["groovybits"]

# Build release optimized with debug info
[profile.release]
opt-level = 3
debug = true

[dependencies]
anyhow = "1"
clap = "4"
env_logger = "0.11.6"
log = "0.4.25"
m3u8-rs = "6"
reqwest = { version = "0.11", features = ["blocking"] }
url = "2.2"
socket2 = "0.5.8"
ctrlc = "3.4.5"
mpegts_pid_tracker = "1.0.2"
bytes = "1.10.0"
regex = "1.11.1"
chrono = "0.4.40"

